raw-configs/kuber/kuber-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: kuber-deployment
  labels:
    app: kuber
    run: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber
      run: app
      version: "1.1"
  template:
    metadata:
      labels:
        app: kuber
        run: app
        version: "1.1"
    spec:
      containers:
        - name: kuber
          image: ekke020/kuber:latest
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
      imagePullSecrets:
        - name: regcred
  strategy:
    blueGreen:                       
      activeService: kuber-service
      previewService: kuber-service-green
      autoPromotionEnabled: false
      previewReplicaCount: 1
