raw-configs/kuber/kuber-service-blue.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: kuber-service-blue
    app: kuber-service-blue
  name: kuber-service-blue
  namespace: default

spec:
  type: NodePort
  selector:
    app: kuber
    run: app
    version: "1.1"
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 7878
