raw-configs/kuber/kuber-service-green.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: kuber-service-green
    app: kuber-service-green
  name: kuber-service-green
  namespace: default

spec:
  type: NodePort
  selector:
    app: kuber
    run: app
    version: "1.1"
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 7878
