raw-configs/kuber/kuber-service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: kuber-service
    app: kuber-service
  name: kuber-service
  namespace: default

spec:
  selector:
    service: kuber-service
    run: app
    version: "1.0"
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
