raw-configs/kuber/kuber-ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress-green
spec:
  defaultBackend:
    service:
      name: kuber-service-green
      port:
        number: 8080
